css/style.css
/* style.css */
*
{
    box-sizing: border-box;
}

body
{
    background-color: #e4e4e4;
    padding: 5px;
    height: 100vh;
    margin: 0;

    font: 500 100% 'Tahoma', system-ui, sans-serif;
}
.page-wrap
{
    background-color: white;
    height: calc(100vh - 10px);
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.33);

    display: grid;
    grid-template-columns: minmax(10px, 1fr) minmax(10px, 3fr);
    grid-template-rows: min-content 1fr min-content;
    gap: 1px;
}
.page-wrap > *
{
    padding: 1rem;
    text-align: center;
}

.page-header
{
    grid-column: 1 / -1;
    background-color: #ffcdd2;
}

.game-info
{
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    background-color: #e1bee7;
}
.game-info .player-info-container
{
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-evenly;
    height: 100%;
}
.game-info .player-info-container .player1-card,
.game-info .player-info-container .player2-card
{
    border-radius: 12px;
}

.game-info .player-info-container .player-mark
{
    font-size: 10vmin;
    padding: 0;
    margin: 0;
}
.game-info .player-info-container .player-name
{
    font-size: 2rem;
}
#p1nameinp,
#p2nameinp
{
    background-color: red;
    width: 100%;
    text-align: center
}

.game
{
    grid-column: 2/ 3;
    background-color: #dcedc8;

    display: flex;
    align-items: center;
    justify-content: center;
}
.game .gameboard-wrapper
{
    background-color: black;
    width: 65vmin;
    height: 65vmin;

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 4px;
}
.game .gameboard-wrapper button
{
    font-size: 10vmin;
    margin: 0;
    padding: 0px;
}

.page-footer
{
    grid-column: 1 / -1;
    background-color: #ffecb3;

    font-size: smaller;
}

